tests/error/modifier_errors/bad_custom_call.err
Error: Dagger constraint violation (at $FILE:9:4)
  | 
7 | @guppy(dagger=True)
8 | def test(x: qubit @owned) -> None:
9 |     measure(x)
  |     ^^^^^^^^^^ This function cannot be called in a dagger context

Guppy compilation failed due to 1 previous error
